--- a/src/app/main-table/main-table.component.html
+++ b/src/app/main-table/main-table.component.html
@@ -1,1 +1,18 @@
-<p>main-table works!</p>
+<table class="mat-elevation-z8">
+  <thead>
+  <tr>
+    <th>Position</th>
+    <th>Name</th>
+    <th>Weight</th>
+    <th>Symbol</th>
+  </tr>
+  </thead>
+  <tbody>
+  <tr *ngFor="let element of elements">
+    <td>{{element.position}}</td>
+    <td>{{element.name}}</td>
+    <td>{{element.weight}}</td>
+    <td>{{element.symbol}}</td>
+  </tr>
+  </tbody>
+</table>
